# snaprfs

./: .gitignore  AUTHORS.txt  CMakeLists.txt  README.md  TODO.md  mk
cmake/: CMakeLists.txt  SnapRFSConfig.cmake
conf/: CMakeLists.txt  config-README.md  snaprfs.conf  snaprfs.service
conf/logger/: README.md  snaprfs.conf
daemon/: CMakeLists.txt  data_receiver.cpp  data_receiver.h  data_sender.cpp  data_sender.h  data_server.cpp  data_server.h  file_listener.cpp  file_listener.h  messenger.cpp  messenger.h  server.cpp  server.h
debian/: changelog  control  copyright  docs  rules  snaprfs-doc.install  snaprfs.install  snaprfs.postinst  snaprfs.postrm  snaprfs.service  snaprfs.sysuser
doc/: CMakeLists.txt  rfs.1  snaprfs.doxy.in  watch-dirs-README.md
snaprfs/: CMakeLists.txt  client.cpp  client.h  connection.cpp  connection.h  exception.h  names.an  order.cpp  order.h  rfs.cpp  rfs.h  version.cpp  version.h.in
src/: CMakeLists.txt  snaprfs.cpp
tests/: CMakeLists.txt  catch_main.cpp  catch_main.h  catch_version.cpp  main.cpp  main.h  start-for-dev.sh  version.cpp
tools/: CMakeLists.txt  rfs.cpp
